utilities/Sol/modules/grammars/language/src/test/resources/cocos/valid/CircularDependency.lc
/*
 * (c) https://github.com/MontiCore/monticore
 */
package valid

language CircularDependency extends CircularDependencyParent {

}
