utilities/Sol/modules/grammars/language/src/test/resources/cocos/invalid/CircularDependencyParent.lc
/*
 * (c) https://github.com/MontiCore/monticore
 */
package invalid

language CircularDependencyParent extends CircularDependency {

}
